[gd_scene load_steps=13 format=3 uid="uid://dcyesmygknrh2"]

[ext_resource type="Script" path="res://Scripts/MenuPrincipal.gd" id="1_3o32w"]
[ext_resource type="Texture2D" uid="uid://em3hhtgs2eyf" path="res://Assets/Parallax/Parallax background.png" id="1_ihhe4"]
[ext_resource type="FontFile" uid="uid://covt2bip852x7" path="res://Assets/Fonts/04b_30/04B_30__.TTF" id="1_oqrvj"]
[ext_resource type="FontFile" uid="uid://8jtfifoqgh0j" path="res://Assets/Fonts/mayan_2/Mayan.ttf" id="1_yeqy2"]
[ext_resource type="Texture2D" uid="uid://cqgs3aseyvj8m" path="res://Sprites/Assets_PixelAdventure/Parallax/parallax-02.png" id="3_8gl12"]
[ext_resource type="Texture2D" uid="uid://cvngflsps17db" path="res://Sprites/Assets_PixelAdventure/Parallax/parallax-03.png" id="4_whdvw"]
[ext_resource type="Texture2D" uid="uid://owlwdggvbxt3" path="res://Sprites/Assets_PixelAdventure/Parallax/parallax-04.png" id="5_nsdg3"]
[ext_resource type="AudioStream" uid="uid://duplcui57ux08" path="res://Assets/Sounds/tex-mex-delight-mexican-mariachi-113044.mp3" id="5_xbv4x"]

[sub_resource type="Animation" id="Animation_5c7k1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transicion/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_4lhmx"]
resource_name = "fade_in"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transicion/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 0.0185815),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transicion/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_b2mwc"]
resource_name = "fade_out"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transicion/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transicion/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nsh1a"]
_data = {
"RESET": SubResource("Animation_5c7k1"),
"fade_in": SubResource("Animation_4lhmx"),
"fade_out": SubResource("Animation_b2mwc")
}

[node name="Menu" type="Node"]
script = ExtResource("1_3o32w")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(1, 0)
motion_mirroring = Vector2(1438, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(-8, -10)
texture = ExtResource("1_ihhe4")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.8, 0)
motion_mirroring = Vector2(1438, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(-9, 346)
texture = ExtResource("3_8gl12")
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.6, 0)
motion_mirroring = Vector2(1438, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(-9, 346)
texture = ExtResource("4_whdvw")
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.4, 0)
motion_mirroring = Vector2(1438, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(-10, 313)
texture = ExtResource("5_nsdg3")
centered = false

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.5
offset_top = -52.0
offset_right = 216.5
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Tittle" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_yeqy2")
theme_override_font_sizes/font_size = 72
text = "MÃ©xico Magico"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="ButtonPlay" type="Button" parent="Control/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_oqrvj")
theme_override_font_sizes/font_size = 26
text = "INICIAR JUEG0"

[node name="ButtonExit" type="Button" parent="Control/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_oqrvj")
theme_override_font_sizes/font_size = 26
text = "Salir"

[node name="Transicion" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nsh1a")
}

[node name="ColorRect" type="ColorRect" parent="Transicion"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_xbv4x")

[connection signal="pressed" from="Control/VBoxContainer/ButtonContainer/ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/ButtonContainer/ButtonExit" to="." method="_on_button_pressed"]
[connection signal="animation_finished" from="Transicion" to="." method="_on_transicion_animation_finished"]
